--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=README.html">
-    <title>Redirecting...</title>
+    <title>Document</title>
 </head>
 <body>
-    <p>If you are not redirected, <a href="README.html">click here</a>.</p>
+    
 </body>
 </html>
